# test_project_pavepo

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linters.yml
alembic/versions/: 2025-03-30_.py
src/: config.py  database.py  main.py
src/models/: audio.py  auth.py
src/routers/: audio_route.py  auth_route.py  default_route.py  users_route.py
src/services/: auth.py
src/utils/: logger.py  save.py
